--- a/app/views/produtos/new.html.erb
+++ b/app/views/produtos/new.html.erb
@@ -1,3 +1,5 @@
-<h1>Novo Produto</h1>
-
-<%=render "form"%>
+<div class = "outer-container">
+    <h1 class = "titulo-formulario">Novo Produto</h1>
+    
+    <%=render "form"%>
+</div>
