--- a/app/views/produtos/index.html.erb
+++ b/app/views/produtos/index.html.erb
@@ -1,16 +1,17 @@
-<table>
-    <thead>
-        <tr>
-            <th>
-                Nome
-            </th>
-        </tr>
-    </thead>
-    <tbody>
-        <% @produtos.each do |produto| %>
-            <tr>
-                <td><%=produto.nome%></td>
-            </tr>
-        <% end %>
-    </tbody>
-</table>
+<div class= "outer-container">
+    <div class= "used-flex">
+        <h1 class= "titulo-formulario">Meus Produtos</h1>
+        <%=link_to "+ Novo Produto", new_produto_path, class: "botao-enviar"%>
+    </div>
+
+    <%@produtos.each do |produto|%>
+        <div>
+            <h3>
+               <%=produto.nome%>
+            </h3>
+            <%=link_to "Editar", edit_produto_path(produto) %>
+            <%=link_to "Excluir", produto_path(produto), data:{turbo_method: :delete}%>
+        </div>
+    <%end%>
+
+</div>
