--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -75,3 +75,25 @@
    align-items: center;
  }
 
+ .container-produtos {
+   display: flex;
+   justify-content: space-between;
+   align-items: center;
+   background-color: black;
+   margin-bottom: 20px;
+   margin-top: 32px;
+   border-radius: 25px;
+   box-shadow: 0px 0px 5px 3px #2db5d4;
+   padding: 7px 25px 7px 25px;
+ }
+
+ .container-produtos h3 {
+   font-size: 18px;
+ }
+
+ .link {
+   color: white;
+   text-decoration: none;
+   font-size: 12px;
+   margin-left: 15px;
+ }
