--- a/app/views/produtos/index.html.erb
+++ b/app/views/produtos/index.html.erb
@@ -5,7 +5,7 @@
     </div>
 
     <%@produtos.each do |produto|%>
-        <div class = "container-produtos">
+        <div class = "container-produtos container-geral">
             <h3>
                <%=produto.nome%>
             </h3>
