--- a/app/views/compras/index.html.erb
+++ b/app/views/compras/index.html.erb
@@ -7,9 +7,21 @@
     <%@compras.each do |compra|%>
         <div class = "container-geral">
             <div class="used-flex">
-                <h3><%=compra.data%></h3>
-                <h3><%=compra.valor%></h3>
+                <h3><%=compra.data.strftime("%d/%m/%Y")%> - <%=compra.produto.nome%></h3>
+                <h3><%=number_to_currency(compra.valor*compra.quantidade, :unit => "R$ ", :separator => ",", :delimiter => ".")%></h3>
             </div>
+            <div class = "used-flex gap">
+                <div class = "used-flex grow">
+                    <span>Quantidade</span>
+                    <span><%=compra.quantidade%></span>
+                </div>
+                
+                <div class = "used-flex grow">
+                    <span>Valor Unitário</span>
+                    <span><%=number_to_currency(compra.valor, :unit => "R$ ", :separator => ",", :delimiter => ".")%></span>
+                </div>
+            </div>
+            <p><%=compra.descricao%></p>
         </div>
     <%end%>
 
