--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,11 @@
 
   <body>
 
-    <%= yield %>
+    <div class= "main-container">
+      <%= render "layouts/menu" %>
+      <%= yield %>
+    </div>
+
 
   </body>
 </html>
