--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -13,12 +13,15 @@
  *= require_tree .
  *= require_self
  */
+ 
+ @import "font-awesome";
 
 
  body {
     background-color: #474747;
     color: white;
     font-family: Inter;
+    margin: 0;
 
  }
 
@@ -143,3 +146,78 @@
   margin: 0;
 
  }
+
+ /*---------------------------------------MENU----------------------------------------*/
+
+ .main-container {
+  display: flex;
+ }
+
+ .menu-container {
+  display: flex;
+  flex-direction: column;
+  width: 330px;
+  height: 100vh;
+  background-color: black;
+ }
+
+  .link-menu {
+  text-decoration: none;
+  color: white;
+  margin-top: 11px;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  gap: 15px;
+
+ }
+
+
+ .link-menu span{
+  flex: 1;
+  background-color: #34DAFF;
+  color: white;
+  padding: 10px;
+  width: 80%;
+  border-radius: 8px 0px 0px 8px;
+  border: 0;
+  transition: 0.5s; 
+  text-decoration: none;
+  font-size: 17px;
+  text-align: center;
+ }
+
+ .link-menu i{
+  margin-left: 10px;
+  font-size: 23px;
+  width: 23px;
+ }
+
+
+
+ .profile {
+  display: flex;
+  align-items: center;
+  margin-left: 30px;
+  margin-top: 35px;
+  gap: 15px;
+  margin-bottom: 20px;
+ }
+
+ .img-profile {
+  width: 70px;
+  height: 70px;
+  border-radius: 50%;
+  display: flex;
+ }
+
+ .link-editar {
+  color: white;
+  text-decoration: none;
+ }
+
+ .profile h3 {
+  margin: 0px;
+  margin-bottom: 5px;
+ }
+
